--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,4 +1,4 @@
 /**app.wxss**/
-@import "colorui/main.wxss";
-@import "colorui/icon.wxss";
+/* @import "colorui/main.wxss";
+@import "colorui/icon.wxss"; */
 /* @import "app.css"; 你的项目css */
