删除部分不需要文件

--- a/miniprogram/pages/home/index/index.wxml
+++ b/miniprogram/pages/home/index/index.wxml
@@ -1,2 +1,10 @@
 <!--miniprogram/pages/home/index/index.wxml-->
-<text>首页的主页</text>
+<view class="wrap">
+  <view class="offer">
+  </view>
+  <view class="exam">
+    <view class="written">笔试</view>
+    <view class="interview">面试</view>
+  </view>
+</view>
+
