--- a/miniprogram/pages/questionBank/index/index.wxss
+++ b/miniprogram/pages/questionBank/index/index.wxss
@@ -1,1 +1,94 @@
 /* miniprogram/pages/questionBank/index/index.wxss */
+
+.written {
+  position: absolute;
+  left: 0px;
+  /* top: 62px; */
+  width: 384rpx;
+  height: 104rpx;
+  line-height: 104rpx;
+  border-radius: 8rpx;
+  text-align: center;
+  border: 2rpx solid rgba(187, 187, 187, 1);
+  background: #fff;
+}
+.written text {
+  width: 80rpx;
+  height: 58rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 40rpx;
+  font-family: PingFangSC-bold;
+}
+.interview {
+  position: absolute;
+  left: 384rpx;
+  /* top: 62px; */
+  width: 366rpx;
+  height: 104rpx;
+  line-height: 104rpx;
+  opacity: 0.8;
+  border-radius: 8rpx;
+  text-align: center;
+  border: 2rpx solid rgba(187, 187, 187, 1);
+  background: #fff;
+
+}
+.interview text {
+  width: 64rpx;
+  height: 46rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 32rpx;
+  font-family: PingFangSC-regular;
+}
+swiper {
+  position: absolute;
+  /* left: -1px; */
+  top: 148rpx;
+  width: 100%;
+  height: 400rpx;
+  background: gray;
+}
+.title {
+  position: absolute;
+  left: 0px;
+  top: 586rpx;
+  width: 374px;
+  height: 132rpx;
+  line-height: 132rpx;
+  text-align: center;
+  border: 2rpx solid rgba(187, 187, 187, 1);
+  background: white;
+}
+.title text {
+  /* width: 96px; */
+  /* height: 68rpx; */
+  color: rgba(16, 16, 16, 1);
+  font-size: 48rpx;
+  /* text-align: left; */
+  font-family: PingFangSC-regular;
+}
+.linel {
+  position: absolute;
+  left: 152rpx;
+  top: 64rpx;
+  width: 100rpx;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+}
+.liner {
+  position: absolute;
+  left: 500rpx;
+  top: 64rpx;
+  width: 100rpx;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+}
+.bank-wrap {
+  position: absolute;
+  top: 718rpx;
+  width: 100%;
+  height: 680rpx;
+  line-height: 40rpx;
+  border-radius: 0rpx;
+  text-align: center;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+  background-color: white;
+}
