--- a/miniprogram/pages/questionBank/index/index.wxml
+++ b/miniprogram/pages/questionBank/index/index.wxml
@@ -1,13 +1,12 @@
+<import src="../template/index.wxml"/>
 <view class="wrap">
-  <!-- <view class="btn-group"> -->
-    <view class="written">
+    <view class="written {{checkoutBank === 'written'?'active':''}}" bindtap="handleWritten">
       <text>笔试</text>
     </view>
-    <view class="interview">
+    <view class="interview {{checkoutBank === 'interview'?'active':''}}" bindtap="handleInterview">
       <text>面试</text>
     </view>
-  <!-- </view> -->
-  <swiper>
+  <swiper indicator-dots="{{true}}" autoplay="{{true}}">
     <swiper-item>
       <image src="../../../images/icon/home1.png"></image>
     </swiper-item>
@@ -20,6 +19,32 @@
       <text>在线答题</text>
     <view class="liner"></view>
   </view>
-  <view class="bank-wrap">
+  <view class="bank-wrap" >
+  <van-tabs active="{{ active }}" color="#EFB806" bind:change="onChange">
+  <!-- <van-tab title="精选">
+    <view class="bank">
+    <text class="bank-title">
+    笔试题库的第一份
+    </text>
+    <van-icon class="exam-icon" name="records" color="#ffc200" size="60rpx"/>
+    <text class="exam">
+    考试
+    </text>
+    <view class="start-exam">
+    开始答题
+    </view>
+    <view class="limit-time">
+      <text>限时</text>
+      <text style="color:#ffc200">50</text>
+      <text>分钟</text>
+    </view>
+    </view>
+  </van-tab> -->
+   <van-tab title="精选">
+   <template is="bankItem" />
+  </van-tab>
+  <van-tab title="选择题">选择题</van-tab>
+  <van-tab title="填空题">填空题</van-tab>
+</van-tabs>
   </view>
 </view>
