--- a/miniprogram/pages/questionBank/index/index.wxss
+++ b/miniprogram/pages/questionBank/index/index.wxss
@@ -1,45 +1,44 @@
 /* miniprogram/pages/questionBank/index/index.wxss */
-
-.written {
+.written, .interview{
   position: absolute;
-  left: 0px;
-  /* top: 62px; */
-  width: 384rpx;
   height: 104rpx;
-  line-height: 104rpx;
-  border-radius: 8rpx;
-  text-align: center;
-  border: 2rpx solid rgba(187, 187, 187, 1);
-  background: #fff;
-}
-.written text {
-  width: 80rpx;
-  height: 58rpx;
-  color: rgba(16, 16, 16, 1);
-  font-size: 40rpx;
-  font-family: PingFangSC-bold;
-}
-.interview {
-  position: absolute;
-  left: 384rpx;
-  /* top: 62px; */
   width: 366rpx;
-  height: 104rpx;
-  line-height: 104rpx;
   opacity: 0.8;
+  line-height: 104rpx;
   border-radius: 8rpx;
   text-align: center;
   border: 2rpx solid rgba(187, 187, 187, 1);
   background: #fff;
-
 }
-.interview text {
+.written {
+  left: 0px;
+}
+.wrap .active {
+  width: 384rpx;
+  opacity: 1;
+}
+
+.interview {
+  left: 384rpx;
+  width: 366rpx;
+  opacity: 0.8;
+}
+.interview.active {
+  left: 366rpx;
+}
+.written text, .interview text{
   width: 64rpx;
   height: 46rpx;
   color: rgba(16, 16, 16, 1);
   font-size: 32rpx;
-  font-family: PingFangSC-regular;
+  font-family: PingFangSC-bold;
 }
+.wrap .active text {
+  width: 80rpx;
+  height: 58rpx;
+  font-size: 40rpx;
+}
+
 swiper {
   position: absolute;
   /* left: -1px; */
@@ -91,4 +90,76 @@ swiper {
   text-align: center;
   border: 1rpx solid rgba(187, 187, 187, 1);
   background-color: white;
+}
+.tab-active-class {
+  font-size: 62rpx;
+}
+.bank {
+  position: relative;
+  left: 36rpx;
+  /* margin: 0 auto; */
+  z-index: 2;
+  width: 680rpx;
+  height: 200rpx;
+  line-height: 40rpx;
+  border-radius: 20rpx;
+  text-align: center;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+  /* background-color: red; */
+}
+.bank-title {
+  position: absolute;
+  left: 40rpx;
+  /* top: 509px; */
+  width: 24r0px;
+  height: 84rrpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 30rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.exam-icon {
+  position: absolute;
+  left: 510rpx;
+  top: 30rpx;
+  width: 72rpx;
+  height: 88rpx;
+}
+.exam {
+  position: absolute;
+  left: 590rpx;
+  top: 5rpx;
+  width: 56rpx;
+  height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.start-exam {
+  position: absolute;
+  left: 82rpx;
+  top: 110rpx;
+  width: 160rpx;
+  height: 60rpx;
+  border-radius: 8rpx;
+  line-height: 60rpx;
+  background-color: rgba(239, 184, 6, 1);
+  color: rgba(250, 247, 247, 1);
+  font-size: 28rpx;
+  text-align: center;
+  font-family: PingFang SC;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+}
+.limit-time {
+  position: absolute;
+  left: 502rpx;
+  top: 130rpx;
+  width: 146rpx;
+  height: 40rpx;
+  line-height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
 }
