--- a/miniprogram/pages/questionBank/template/index.wxml
+++ b/miniprogram/pages/questionBank/template/index.wxml
@@ -1,19 +1,27 @@
 <template name="bankItem">
     <view class="bank">
     <text class="bank-title">
-    笔试题库的第一份
+    {{item.title}}
     </text>
     <van-icon class="exam-icon" name="records" color="#ffc200" size="60rpx"/>
     <text class="exam">
     考试
     </text>
-    <view class="start-exam">
+    <!-- <view  catchtap="{{foo.handleStatus(item.id)}}"></view> -->
+    <view class="start-exam" bindtap="handleClick">
     开始答题
     </view>
     <view class="limit-time">
       <text>限时</text>
-      <text style="color:#ffc200">50</text>
+      <text style="color:#ffc200">{{item.limit_time}}</text>
       <text>分钟</text>
     </view>
     </view>
 </template>
+<wxs module="foo">
+  module.exports = {
+  handleStatus: function (id) {
+      console.log(id)
+    }
+}
+</wxs>
