--- a/miniprogram/pages/questionBank/index/index.wxss
+++ b/miniprogram/pages/questionBank/index/index.wxss
@@ -84,7 +84,6 @@ swiper {
   position: absolute;
   top: 718rpx;
   width: 100%;
-  height: 680rpx;
   line-height: 40rpx;
   border-radius: 0rpx;
   text-align: center;
@@ -97,7 +96,7 @@ swiper {
 .bank {
   position: relative;
   left: 36rpx;
-  /* margin: 0 auto; */
+  margin: 30rpx 0;
   z-index: 2;
   width: 680rpx;
   height: 200rpx;
@@ -105,7 +104,6 @@ swiper {
   border-radius: 20rpx;
   text-align: center;
   border: 1rpx solid rgba(187, 187, 187, 1);
-  /* background-color: red; */
 }
 .bank-title {
   position: absolute;
