--- a/miniprogram/pages/home/index/index.wxss
+++ b/miniprogram/pages/home/index/index.wxss
@@ -1,51 +1,37 @@
 /* miniprogram/pages/home/index/index.wxss */
-page {
-  background-color: #FABF01;
-  height: 100%;
-  /* width: 25.94rem; */
-  width: 100%;
-}
-.wrap {
-  display: flex;
-  height: 100%;
-  width: 100%;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.exam {
-  display: flex;
-}
+
 .offer {
-  width: 361rpx;
-  height: 361rpx;
-  border: 1px solid;
+  position: absolute;
+  left: 154rpx;
+  top: 180rpx;
+  width: 440rpx;
+  height: 430rpx;
+  
+}
+image {
+  width: 100%;
+  height: 100%;
 }
 .written {
-  width: 264rpx;
-  height: 264rpx;
-  line-height: 264rpx;
-  background-color: rgba(85, 65, 3, 1);
-  color: #FABF01;
-  font-size: 72rpx;
-  text-align: center;
-  box-shadow: 4rpx 4rpx 12rpx 0px rgba(0, 0, 0, 0.4);
-  font-family: -apple-system;
-  border: 2rpx solid rgba(255, 255, 255, 0);
-  border-radius: 100%;
-
+  left: 86rpx;
 }
 .interview {
-  width: 264rpx;
-  height: 264rpx;
-  line-height: 264rpx;
+  left: 420rpx;
+}
+.interview, .written {
+  position: absolute;
+  top: 800rpx;
+  width: 248rpx;
+  height: 254rpx;
+  line-height: 254rpx;
   background-color: rgba(85, 65, 3, 1);
-  color: #FABF01;
+  color: rgba(16, 16, 16, 1);
   font-size: 72rpx;
   text-align: center;
-  box-shadow: 4rpx 4rpx 12rpx 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 4rpx 4rpx 13rpx 0rpx rgba(0, 0, 0, 0.4);
   font-family: -apple-system;
-  border: 2rpx solid rgba(255, 255, 255, 0);
+  border: 1rpx solid rgba(255, 255, 255, 0);
+  color: #ffc200;
   border-radius: 100%;
 
 }
