feat:完成行业选择模块

--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,7 +1,8 @@
 /**app.wxss**/
-/* @import "colorui/main.wxss";
+/* 
 @import "colorui/icon.wxss"; */
 /* @import "app.css"; 你的项目css */
+@import "colorui/main.wxss";
 page {
   height: 100%;
   background-color: #FABF01;
