--- a/miniprogram/pages/home/IndustryChoose/IndustryChoose.wxss
+++ b/miniprogram/pages/home/IndustryChoose/IndustryChoose.wxss
@@ -1,1 +1,98 @@
 /* miniprogram/pages/home/IndustryChoose/IndustryChoose.wxss */
+.VerticalNav.nav {
+  width: 200rpx;
+  white-space: initial;
+  background-color: #f1f1f1;
+}
+
+.VerticalNav.nav .cu-item {
+  width: 100%;
+  text-align: center;
+  background-color: #f1f1f1;
+  margin: 0;
+  border: none;
+  height: 50px;
+  position: relative;
+}
+
+.VerticalNav.nav .cu-item.cur {
+  background-color: #fff;
+}
+
+.VerticalNav.nav .cu-item.cur::after {
+  content: "";
+  width: 8rpx;
+  height: 30rpx;
+  border-radius: 10rpx 0 0 10rpx;
+  position: absolute;
+  background-color: rgba(250, 191, 1, 1);
+  top: 0;
+  right: 0rpx;
+  bottom: 0;
+  margin: auto;
+}
+
+.VerticalBox{
+  display: flex;
+}
+
+.VerticalMain{
+  background-color: #fff;
+}
+.checked-industry {
+  display: flex;
+  background: white;
+  align-items: center;
+  height: 130rpx;
+}
+.checked-industry text {
+  text-indent: 1em;
+  height: 50rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 30rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.checked-industry button {
+  width: 160rpx;
+  height: 60rpx;
+  line-height: 60rpx;
+  border-radius: 8rpx;
+  background-color: rgba(250, 191, 1, 1);
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: center;
+  font-family: PingFang SC;
+  border: 1rpx solid rgba(187, 187, 187, 1);
+}
+.title {
+  color: rgba(250, 191, 1, 1);
+}
+
+.skill {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center ;
+  flex-wrap: wrap ;
+}
+.skill view {
+  width: 174rpx;
+  height: 60rpx;
+  border-radius: 24rpx;
+  color: rgba(16, 16, 16, 1);
+  margin-top: 20rpx;
+  line-height: 50rpx;
+  text-align: center;
+  box-shadow: 0rpx 4rpx 4rpx 0rpx rgba(178, 178, 178, 0.4);
+  font-family: -apple-system;
+  border: 4rpx solid rgba(250, 191, 1, 1);
+}
+.skill-active {
+  border: 4rpx solid rgba(0, 0, 0, 1) !important;
+}
+van-collapse-item .van-cell__title {
+  color: rgba(250, 191, 1, 1);
+}
+van-collapse-item .van-cell__right-icon-wrap {
+  color: rgba(250, 191, 1, 1);
+}
