--- a/miniprogram/pages/questionBank/endQuestion/endQuestion.wxml
+++ b/miniprogram/pages/questionBank/endQuestion/endQuestion.wxml
@@ -1,2 +1,8 @@
 <!--miniprogram/pages/questionBank/endQuestion/endQuestion.wxml-->
-<text>笔试答完题目界面</text>
+<view class="title">笔试题目</view>
+<view class="frist1">笔试题库的第一份</view>
+<view class="sentence">“每日一套，早日offer”</view>
+<view class="blankBox"></view>
+<view class="summary">总结：对于这份试卷的总结</view>
+<navigator url="../../questionBank/index/index"><button class="backBank">返回题库</button> </navigator>
+<navigator url="../viewQuestions/viewQuestions"><button class="seekWrong">查找错题</button> </navigator>
