--- a/miniprogram/pages/questionBank/endInterviewQuestion/endInterviewQuestion.wxss
+++ b/miniprogram/pages/questionBank/endInterviewQuestion/endInterviewQuestion.wxss
@@ -1,1 +1,48 @@
 /* miniprogram/pages/questionBank/endInterviewQuestion/endInterviewQuestion.wxss */
+.blankBox{
+  position: absolute;
+  left: 64rpx;
+  top: 184rpx;
+  width: 616rpx;
+  height: 550rpx;
+  line-height: 52rpx;
+  border-radius: 50rpx;
+  background-color: rgba(255, 255, 255, 0.47);
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: center;
+  box-shadow: 0rpx 8rpx 18rpx 0rpx rgba(178, 178, 178, 0.4);
+  font-family: Arial;
+  border: 1rpx solid rgba(255, 255, 255, 0);
+}
+.answer1{
+  position: absolute;
+  left: 126rpx;
+  top: 256rpx;
+  width: 326rpx;
+  height: 290rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 36rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.allExam,.questiobBank{
+  position: absolute;
+  top: 872rpx;
+  width: 302rpx;
+  height: 76rpx;
+  border-radius: 20rpx;
+  background-color: rgba(250, 191, 1, 1);
+  color: rgba(16, 16, 16, 1);
+  font-size: 30rpx;
+  text-align: center;
+  font-family: Microsoft Yahei;
+  border: 4rpx solid rgba(0, 0, 0, 1);  
+
+}
+.allExam{
+  left: 54rpx;
+}
+.questiobBank{
+  left: 392rpx;
+}
