feat:新增录音功能

--- a/miniprogram/pages/home/IndustryChoose/IndustryChoose.wxml
+++ b/miniprogram/pages/home/IndustryChoose/IndustryChoose.wxml
@@ -11,10 +11,10 @@
   <scroll-view class="VerticalMain" scroll-y="{{ifScroll}}" scroll-with-animation style="height: calc(100vh - 130rpx)" scroll-into-view="main-{{MainCur}}" >
     <view class="" wx:for="{{list}}" wx:key="id" id="main-{{index}}" style="height: 100%;">
     <!-- <block wx:for="{{item.name}}"> -->
-      <van-collapse value="{{ activeName }}" wx:for="{{item.name}}" bind:change="onChange" accordion>
+      <van-collapse value="{{ activeName }}" wx:for="{{item.name}}" bind:change="onChange" wx:key="index" accordion>
         <van-collapse-item title="{{item.post}}" name="{{index}}" >
         <view class="skill">
-          <block wx:for="{{item.skill}}">
+          <block wx:for="{{item.skill}}" wx:key="index">
           <view data-src="{{item}}" class="{{item===industry?'skill-active':''}}" bindtap="handleSkillCheck">{{item}}</view>
           </block>
         </view>
