--- a/miniprogram/pages/home/enterInterview/enterInterview.wxss
+++ b/miniprogram/pages/home/enterInterview/enterInterview.wxss
@@ -1,1 +1,70 @@
 /* miniprogram/pages/home/enterInterview/enterInterview.wxss */
+
+
+.bank {
+  position: absolute;
+  left: 66rpx;
+  top: 280rpx;
+  width: 616rpx;
+  height: 282rpx;
+  line-height: 40rpx;
+  border-radius: 50rpx;
+  background-color: rgba(255, 255, 255, 0.47);
+  text-align: center;
+  box-shadow: 0rpx 8rpx 18rpx 0rpx rgba(178, 178, 178, 0.4);
+  border: 1rpx solid rgba(255, 255, 255, 0);
+}
+.title {
+  position: absolute;
+  left: 50rpx;
+  top: 70rpx;
+  width: 520rpx;
+  height: 80rpx;
+  color: rgba(12, 12, 12, 1);
+  font-size: 56rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.num {
+  position: absolute;
+  left: 350rpx;
+  top: 200rpx;
+  width: 212rpx;
+  height: 46rpx;
+  color: rgba(12, 12, 12, 1);
+  font-size: 32rpx;
+  text-align: left;
+  font-family: PingFangSC-regular;
+}
+.type {
+  position: absolute;
+  left: 244rpx;
+  top: 800rpx;
+  width: 260rpx;
+  height: 50rpx;
+  color: rgba(12, 12, 12, 1);
+  font-size: 36rpx;
+  text-align: center;
+  font-family: PingFangSC-regular;
+}
+.audio, .video {
+  position: absolute;
+  top: 950rpx;
+  width: 220rpx;
+  height: 104rpx;
+  line-height: 104rpx;
+  border-radius: 50rpx;
+  background-color: rgba(250, 191, 1, 1);
+  color: rgba(0, 0, 0, 1);
+  font-size: 40rpx;
+  text-align: center;
+  box-shadow: 0rpx 2rpx 5rpx 0rpx rgba(0, 0, 0, 0.39);
+  font-family: PingFang SC;
+  border: 2rpx solid rgba(0, 0, 0, 1);
+}
+.audio {
+  left: 120rpx;
+}
+.video {
+  left: 400rpx;
+}
