--- a/miniprogram/pages/home/examInterview/examInterview.wxml
+++ b/miniprogram/pages/home/examInterview/examInterview.wxml
@@ -1,2 +1,13 @@
 <!--miniprogram/pages/home/examInterview/examInterview.wxml-->
-<text>面试考试界面</text>
+<view class="body"></view>
+<view class="txt1">银行招聘面试真题</view>
+<view class="txt2">题目数量：5道</view>
+<view class="line"></view>
+<image src="../../../images/icon/people.png" class="img1"></image>
+<image src="../../../images/icon/lightsou.png" class="img2"></image>
+<view class="txt3">面试官</view>
+<view class="txt4">若没有听清题目，可点击</view>
+<image src="../../../images/icon/graysou.png" class="img3"></image>
+<view class="txt5">让面试官再讲一遍</view>
+<view class="txt6">下一题</view>
+<view class="txt7">正在录制中......</view>
