--- a/miniprogram/pages/home/enterInterview/enterInterview.wxml
+++ b/miniprogram/pages/home/enterInterview/enterInterview.wxml
@@ -1,7 +1,37 @@
-<!--miniprogram/pages/home/enterInterview/enterInterview.wxml-->
-<view class="topic"></view>
-<text class="txt1">银行招聘面试真题</text>
-<text class="txt2">题目数量：5道</text>
-<text class="txt3">请选择录制方式</text>
-<view class="button1">音频</view>
-<view class="button2">视频</view>
+
+
+
+<view class="bank">
+  <text class="title">{{bank.title}}</text>
+  <text class="num">题目数量：{{bank.count}}道</text>
+</view>
+<view class="type">
+  <text>请选择录制方式</text>
+</view>
+<navigator url="../examInterview/examInterview?type=audio&id={{bank.id}}">
+  <view class="audio">
+    <text>音频</text>
+  </view>
+</navigator>
+<navigator url="../examInterview/examInterview?type=video&id={{bank.id}}">
+  <view class="video">
+    <text>视频</text>
+  </view>
+</navigator>
+
+<!-- <view class="yuyinWrap">
+  <textarea class='yuyinCon' placeholder='请输入内容' value='{{content}}'></textarea>
+  <view class=''>
+    <button class="yuyinBtn {{recordState == true ? 'yuyinBtnBg':''}}" bindtouchstart="touchStart" bindtouchend="touchEnd">
+      <text wx:if="{{recordState == false}}">按住 说话</text>
+      <text wx:else>松开 结束</text>
+    </button>
+  </view>-->
+  <!-- 开始语音 弹出语音图标表示正在录音 -->
+ <!-- <cover-view class="startYuyinImage" wx:if="{{recordState == true}}">
+    <cover-view>开始语音</cover-view>
+  </cover-view>
+</view> -->
+<!-- 以上代码仅做为测试 -->
+
+
