--- a/miniprogram/pages/home/enterInterview/enterInterview.wxss
+++ b/miniprogram/pages/home/enterInterview/enterInterview.wxss
@@ -1,8 +1,10 @@
 /* miniprogram/pages/home/enterInterview/enterInterview.wxss */
-.topic{
+
+
+.bank {
   position: absolute;
   left: 66rpx;
-  top: 296rpx;
+  top: 280rpx;
   width: 616rpx;
   height: 282rpx;
   line-height: 40rpx;
@@ -10,23 +12,23 @@
   background-color: rgba(255, 255, 255, 0.47);
   text-align: center;
   box-shadow: 0rpx 8rpx 18rpx 0rpx rgba(178, 178, 178, 0.4);
-  border: 2rpx solid rgba(255, 255, 255, 0);
+  border: 1rpx solid rgba(255, 255, 255, 0);
 }
-.txt1{
+.title {
   position: absolute;
-  left: 110rpx;
-  top: 356rpx;
-  width: 516rpx;
+  left: 50rpx;
+  top: 70rpx;
+  width: 520rpx;
   height: 80rpx;
   color: rgba(12, 12, 12, 1);
-  font-size: 46rpx;
+  font-size: 56rpx;
   text-align: left;
   font-family: PingFangSC-regular;
 }
-.txt2{
+.num {
   position: absolute;
-  left: 424rpx;
-  top: 482rpx;
+  left: 350rpx;
+  top: 200rpx;
   width: 212rpx;
   height: 46rpx;
   color: rgba(12, 12, 12, 1);
@@ -34,46 +36,35 @@
   text-align: left;
   font-family: PingFangSC-regular;
 }
-.txt3{
+.type {
   position: absolute;
   left: 244rpx;
-  top: 808rpx;
-  width: 254rpx;
+  top: 800rpx;
+  width: 260rpx;
   height: 50rpx;
   color: rgba(12, 12, 12, 1);
   font-size: 36rpx;
-  text-align: left;
+  text-align: center;
   font-family: PingFangSC-regular;
 }
-.button1{
+.audio, .video {
   position: absolute;
-  left: 108rpx;
-  top: 944rpx;
+  top: 950rpx;
   width: 220rpx;
   height: 104rpx;
+  line-height: 104rpx;
   border-radius: 50rpx;
   background-color: rgba(250, 191, 1, 1);
   color: rgba(0, 0, 0, 1);
   font-size: 40rpx;
   text-align: center;
-  line-height:104rpx ;
-  box-shadow: 0px 4rpx 10rpx 0px rgba(0, 0, 0, 0.39);
-  font-family: Microsoft Yahei;
-  border: 4rpx solid rgba(0, 0, 0, 1);
+  box-shadow: 0rpx 2rpx 5rpx 0rpx rgba(0, 0, 0, 0.39);
+  font-family: PingFang SC;
+  border: 2rpx solid rgba(0, 0, 0, 1);
 }
-.button2{
-  position: absolute;
-  left: 412rpx;
-  top: 944rpx;
-  width: 220rpx;
-  line-height:104rpx ;
-  height: 104rpx;
-  border-radius: 50rpx;
-  background-color: rgba(250, 191, 1, 1);
-  color: rgba(12, 12, 12, 1);
-  font-size: 40rpx;
-  text-align: center;
-  box-shadow: 0px 4rpx 10rpx 0px rgba(0, 0, 0, 0.39);
-  font-family: Microsoft Yahei;
-  border: 4rpx solid rgba(12, 12, 12, 1);
+.audio {
+  left: 120rpx;
+}
+.video {
+  left: 400rpx;
 }
