--- a/miniprogram/pages/home/examInterview/examInterview.wxss
+++ b/miniprogram/pages/home/examInterview/examInterview.wxss
@@ -117,3 +117,32 @@
   height: NaNpx;
   border: 2rpx solid rgba(187, 187, 187, 1);
 }
+
+.yuyinWrap {
+  position: relative;
+  margin-top:300rpx;
+}
+ 
+.yuyinCon {
+  border: 1px solid #ccc;
+  margin: 0 auto;
+  padding: 10rpx 10rpx 70rpx;
+}
+.yuyinBtn {
+  width: 20%;
+  height: 70rpx;
+  position: absolute;
+  right: 112rpx;
+  bottom: 12rpx;
+  border: 1px solid #eee;
+  background: #fff;
+  color: #606267;
+  line-height: 62rpx;
+  font-size: 28rpx;
+}
+.start {
+  left: -270rpx;
+}
+.next {
+  left: 107rpx;
+}
