--- a/miniprogram/pages/center/index/index.wxss
+++ b/miniprogram/pages/center/index/index.wxss
@@ -1,1 +1,27 @@
 /* miniprogram/pages/center/index/index.wxss */
+page{
+  background-color: white;
+}
+.center1{
+  position: absolute;
+  left: 26rpx;
+  top: 32rpx;
+  width: 698rpx;
+  height: 200rpx;
+  line-height: 40rpx;
+  border-radius: 16rpx;
+  text-align: center;
+  box-shadow: 0rpx 2rpx 8rpx 0rpx rgba(250, 191, 1, 0.47);
+  border: 1rpx solid rgba(255, 255, 255, 0);
+}
+.touxiang{
+  position: absolute;
+  left: 27px;
+  top: 129px;
+  width: 94px;
+  height: 92px;
+  line-height: 20px;
+  background-color: rgba(127, 159, 206, 1);
+  text-align: center;
+  border: 1px solid rgba(187, 187, 187, 1);
+}
