--- a/miniprogram/pages/home/examInterview/examInterview.wxml
+++ b/miniprogram/pages/home/examInterview/examInterview.wxml
@@ -13,6 +13,7 @@
 <view class="txt7">正在录制中......</view>
 <!-- 以下代码仅做为测试 -->
 <!-- <block wx:if="{{type === 'audio'}}">
+<block wx:if="{{type === 'audio'}}">
 
 <view>
     <button bindtap='getlocat'>开始录音</button>
@@ -25,6 +26,7 @@
   <view class=''>
       <button hidden="{{src}}" class="yuyinBtn start" bindtap='wordYun'>开始</button>
    <button class="yuyinBtn" bindtap='end'>结束</button>
+  
           <button  class="yuyinBtn" bindtap='wordYun'>再听一遍</button>
       <button hidden="{{(!src)&&(!disabled)}}" class="yuyinBtn start" bindtap="handleNext">下一题</button>
    <button hidden="{{!(src&&disabled)}}" class="yuyinBtn start" bindtap="handleEnd">结束</button>
@@ -33,4 +35,5 @@
 </block>
 <block wx:else>
 <view>录屏</view>
-</block> -->
+</block> 
+</block>
