--- a/miniprogram/pages/home/IndustryChoose/IndustryChoose.wxss
+++ b/miniprogram/pages/home/IndustryChoose/IndustryChoose.wxss
@@ -86,6 +86,7 @@
   box-shadow: 0rpx 4rpx 4rpx 0rpx rgba(178, 178, 178, 0.4);
   font-family: -apple-system;
   border: 4rpx solid rgba(250, 191, 1, 1);
+  font-size: 22rpx;
 }
 .skill-active {
   border: 4rpx solid rgba(0, 0, 0, 1) !important;
